--- a/Maior_Idade/index.html
+++ b/Maior_Idade/index.html
@@ -6,17 +6,18 @@
     <title>Maior Idade</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
         <h1>Título</h1>
     </header>
     <section>
-        <div>
+        <div id="msg">
             Texto...
         </div>
         <div>
-
+        <img id="imagem" src="./Public/Img/Adolescente.jpg" alt="foto">
         </div>
+      <input type="text" id="idade"  Digite a sua idade:>
     </section>
     <footer>
         &copy;Maioridade
